Side Nav Fixes (#1161)
* Fixed an issue where there was extra padding on top/bottom of readers when side nav was hidden.

* Fixed a bug where fit to screen wasn't forcing width scaling

* Added back total pages to many pages

* Fixed the padding on series detail cards

* Tweaked carousels to match series detail padding

* Fixed an issue where large amount of libraries could have 2 highlighted at once due to how highlight logic works on routes.

* Cleaned up some extra space in card detail layout due to moving title into compainion bar

* Moved some gloabls to global and moved color-scheme to body tag

* Moved scrollbar onto the body itself which helps with page jank on loading and fixes scrollbar not working with theme

--- a/UI/Web/src/theme/utilities/_global.scss
+++ b/UI/Web/src/theme/utilities/_global.scss
@@ -1,5 +1,17 @@
 // Global styles for the site. Keep this as small as possible
 
+html, body { height: 100%; overflow: hidden; }
+body {
+  margin: 0;
+  font-family: var(--body-font-family);
+  color: var(--body-text-color);
+  color-scheme: var(--color-scheme);
+  max-height: 100%;
+  overflow-y: auto;
+  margin-top: 56px;
+}
+
+
 hr {
     background-color: var(--hr-color);
 }
