--- a/UI/Web/src/theme/components/_carousel.scss
+++ b/UI/Web/src/theme/components/_carousel.scss
@@ -1,3 +1,3 @@
 .swiper-slide {
-    margin: 0 5px;
+    margin: 0 0.25rem;
 }
